Fix alignment on management pages

--- a/indico/web/client/styles/base/_layout.scss
+++ b/indico/web/client/styles/base/_layout.scss
@@ -97,7 +97,7 @@ body > * {
 
         .action-menu {
             flex-shrink: 0;
-            margin-top: 5px;
+            margin-top: -0.5%;
         }
     }
 
